--- a/sub/breaker.html
+++ b/sub/breaker.html
@@ -257,9 +257,9 @@
                 <div class="footer_menu">
                     <p>MENU</p>
                     <ul>
-                        <li><a href="sub/about.html">ABOUT</a></li>
-                        <li><a href="sub/breaker.html">BREAKER</a></li>
-                        <li><a href="sub/history.html">HISTORY</a></li>
+                        <li><a href="../sub/about.html">ABOUT</a></li>
+                        <li><a href="../sub/breaker.html">BREAKER</a></li>
+                        <li><a href="../sub/history.html">HISTORY</a></li>
                     </ul>
                 </div>
             </div><!-- inner -->
