--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- 아이콘 CDN빙식으로 적용-->
     <link href="css/swiper-bundle.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!-- aos -->
     <link href="css/main.css" rel="stylesheet">
 
     <!-- js -->
@@ -596,7 +596,7 @@
 
     </div><!-- wrap -->
 
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
        once: true,
@@ -604,7 +604,7 @@
     $(window).on('load', function () {
           AOS.refresh();
       });
-    </script><!-- aos -->
+    </script>
 
 
 </body>
