--- a/sub/breaker.html
+++ b/sub/breaker.html
@@ -201,8 +201,8 @@
                             <h2 class="h2_02">juge</h2>
                         </div>
 
-                        <div class="juge_all">
-                            <div class="day day1" data-aos="fade-up" data-aos-duration="1500">
+                        <div class="juge_all" data-aos="fade-up" data-aos-duration="1500">
+                            <div class="day day1">
                                 <p>DAY1</p>
                                 <ul class="juges">
                                     <li><span>BOJIN</span><a href="https://www.youtube.com/watch?v=D4XoWy29QdU" target="_blank"><img src="../images/juge1_01.jpg" alt="BOJIN"></a></li>
@@ -213,7 +213,7 @@
                                 </ul><!-- juge1 -->
                                 </div><!-- day1 -->
 
-                                <div class="day day2" data-aos="fade-up" data-aos-duration="2000">
+                                <div class="day day2">
                                     <p>DAY2</p>
                                 <ul class="juges">
                                     <li><span>DIFFER</span><a href="https://www.youtube.com/watch?v=uqCdeU_78Y4" target="_blank"><img src="../images/juge2_01.jpg" alt="DIFFER"></a></li>
@@ -224,7 +224,7 @@
                                 </ul><!-- juge2 -->
                                 </div><!-- day2 -->
 
-                                <div class="day day3" data-aos="fade-up" data-aos-duration="2500">
+                                <div class="day day3">
                                     <p>DAY3</p>
                                 <ul class="juges">
                                     <li><span>FLEA ROCK</span><a href="https://www.youtube.com/watch?v=EcU6z2nAOXo" target="_blank"><img src="../images/juge3_01.jpg" alt="FLEA ROCK"></a></li>
@@ -277,6 +277,6 @@
           AOS.refresh();
       });
     </script>
-
+    
 </body>
 </html>
