--- a/sub/about.html
+++ b/sub/about.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- 아이콘 CDN빙식으로 적용-->
     <link href="../css/swiper-bundle.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!-- aos -->
     <link href="../css/about.css" rel="stylesheet">
 
     <!-- js -->
@@ -204,15 +204,15 @@
 
     </div><!-- wrap -->
 
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-         AOS.init({
+        AOS.init({
        once: true,
     });
     $(window).on('load', function () {
           AOS.refresh();
       });
-    </script><!-- aos -->
+    </script>
 
 
 </body>
