--- a/sub/breaker.html
+++ b/sub/breaker.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="BBICKOREA">
     <meta property="og:url" content="http://test.dothome.co.kr">
     <meta property="og:image" content="../images/bbic_og.png"><!-- 2:1사이즈 -->
-    <meta property="og:description" content="Bucheon Bboy internationai Championshios">
+    <meta property="og:description" content="Bucheon Bboy internationai Championships">
 
     <!-- favicon -->
     <!--사이즈 16*16 .ico로 작성-->
